Update elasticsearch.ps1